--- a/css/old.css
+++ b/css/old.css
@@ -86,7 +86,7 @@ button {
 .header-container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .page-header {
